# jit_and_aot

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: ir_factorial.cpp  peephole.cpp
lib/: CMakeLists.txt
lib/cfg_analyze/: CMakeLists.txt
lib/cfg_analyze/include/jit_aot/cfg_analyze/: common_flags.hpp  dfs.hpp  dom.hpp  loop_tree.hpp  rpo.hpp
lib/check_elimination/: CMakeLists.txt
lib/check_elimination/include/jit_aot/: check_elimination.hpp
lib/common/: CMakeLists.txt
lib/common/include/jit_aot/: common.hpp
lib/ir/: CMakeLists.txt
lib/ir/include/jit_aot/ir/: basic_block.hpp  builder.hpp  formatting.hpp  function.hpp  instr.hpp  module.hpp  types.hpp  values.hpp
lib/ir/src/: formatting.cpp
lib/peephole/: CMakeLists.txt
lib/peephole/include/jit_aot/: peephole.hpp
lib/peephole/include/jit_aot/peephole/: arith.hpp
lib/peephole/src/: arith.cpp
testing/: CMakeLists.txt
testing/include/jit_aot/testing/: test_funcs.hpp
testing/src/: builder_tests.cpp  check_elimination_tests.cpp  dfs_tests.cpp  dom_tests.cpp  loop_tree_tests.cpp  peephole_tests.cpp  rpo_tests.cpp
